# RFT

./: .gitattributes  .gitignore  RFT_functional_check.ipynb  annotations_initial.csv  mock_annotations.csv  pyproject.toml  requirements.txt  test.ipynb
benchmark_RFT/: .gitignore
benchmark_RFT/eval_programs/: eval_pesto_conversion_roadrunner.py  pypesto_result_storage_evaluation.py  synthetic_data_parameter_estimation_evaluation.py
benchmark_RFT/eval_programs/gold_results/: 6WEN-A.results.toml  AMFMN_pred_data.json  MouseAtlas_subset_bbknn_stats_gold.json  MouseAtlas_total_bbknn_stats_gold.json  anti_meta_gold.json  bbknn_like_stats_gold.json  best_fval.json  best_parameters.csv  boehm_hierarchical_opt_gold.json  boehm_hierarchical_opt_removed_measurements.txt  cellfinder_cube_generator_gold.npy  cellfinder_cube_generator_gold.txt  cellfinder_train_yaml_model.keras  censored_removed_measurements.tsv  cox_cc_test_gold.csv  cox_ph_metabric_test_gold.csv  decoupler_removed_ids.txt  deepdta_kiba_gold_results.csv  deephit_comprisk_test_gold.csv  delaney_graphconv_test_gold.csv  delaney_uncertainty_test_gold.csv  elastic_removed_ids.txt  elastic_removed_rows.csv  elastic_tensor_all_gold.csv  elastic_tensor_test_gold.csv  flla_test_public_gold.csv  gdb1k_test_gold.csv  gradient_check_results.csv  kvfinder_manifest.csv  metabric_test.csv  metabric_test_gold.csv  mnist_survival_test_gold.npz  mtlr_metabric_gold.csv  murcko_compute_manifest_gold.csv  murcko_manifest_gold.csv  muv_seq2seq_test_gold.csv  nybb_spatial_join_inner_gold.csv  nybb_spatial_join_left_gold.csv  nybb_spatial_join_right_gold.csv  pancreas_bbknn_minimal_gold.h5ad  (+17 more)
benchmark_RFT/gold_programs/: pesto_conversion_roadrunner.py  pypesto_result_storage.py  synthetic_data_parameter_estimation.py
configs/: dataset_info.json  llamafactory_sft.yaml
scripts/: build_annotation_table.py
src/rft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/rft/cli/: run_build.py  run_eval.py  run_generate.py  run_train.py  run_verify.py
(+18 files in other folders)
