[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rft"
version = "0.1.0"
description = "Verifier-guided Rejective Fine-Tuning (RFT) pipeline for scientific code generation"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "Apache-2.0" }

authors = [
  { name = "Zhuoyang Li", email = "li.13297@osu.edu" }
]

keywords = [
  "RFT",
  "rejective-fine-tuning",
  "verification",
  "trajectory-distillation",
  "scientific-llm",
  "code-generation"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]


dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "pyyaml>=6.0",
  "tqdm>=4.65",
  "rich>=13.5",
  "loguru>=0.7",
  "jsonlines>=4.0",
  "orjson>=3.9",
  "tenacity>=8.2",
  "psutil>=5.9",
  "click>=8.1",
  "typer>=0.9",
  "httpx>=0.26",
  "openai>=1.3"
]

[project.optional-dependencies]

dev = [
  "ipython",
  "pytest>=7.4",
  "pytest-cov",
  "black>=23.7",
  "isort>=5.12",
  "ruff>=0.1.6",
  "mypy>=1.7"
]

eval = [
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.13"
]

[project.scripts]
rft-generate = "rft.cli.run_generate:main"
rft-verify   = "rft.cli.run_verify:main"
rft-build    = "rft.cli.run_build:main"
rft-train    = "rft.cli.run_train:main"
rft-eval     = "rft.cli.run_eval:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["rft*"]


[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
